# python-project-50

./: .gitignore  .zshrc  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  calculate_diff.py  file_formatter.py  file_parser.py  generate_diff.py
gendiff/scripts/: gendiff.py
test/: test_gendiff.py
